--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,6 +18,19 @@
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
+          <!-- Example structure for activities -->
+          <!--
+          <div class="activity">
+            <h4>Activity Name</h4>
+            <p>Description of the activity.</p>
+            <h5>Participants:</h5>
+            <ul class="participants-list">
+              <li>Participant 1</li>
+              <li>Participant 2</li>
+              <!-- More participants -->
+            </ul>
+          </div>
+          -->
         </div>
       </section>
 
